#9656 closed bug (fixed)
Replicants which cause Deskbar crash
Reported by: | Giova84 | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Deskbar | Version: | R1/Development |
Keywords: | Replicants which cause Deskbar crash networkstatus process controller | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
I've just upgraded to hrev45477. After setting up all my preferences, i have rebooted and when the Desktop appear i have found that Deskbar crashed. Try to restart Deskbar doesn't help: it always crashed. After some tests i have found that the issue was caused by two replicants: NetWorkStatus and ProcessController. Yes: if i install these two replicants (or only just one of this two), at the boot time they caused Deskbar crash.
This is the part of syslog which tell about the crash with these replicants:
KERN: debug_server: Killing team 164 (/boot/system/Deskbar) KERN: debug_server: TeamDebugHandler::Init(): Failed to get info for team 164: Operation on invalid team KERN: debug_server: KillTeam(): Error getting info for team 164: Operation on invalid team KERN: debug_server: Killing team 164 () KERN: vm_soft_fault: va 0x0 not covered by area in address space KERN: vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0x120, ip 0x4300f5, write 0, user 1, thread 0x1f5 KERN: vm_page_fault: thread "Deskbar" (501) in team "Deskbar" (501) tried to read address 0x120, ip 0x4300f5 ("libbe.so_seg0ro" +0x1cb0f5) KERN: debug_server: Thread 501 entered the debugger: Segment violation KERN: stack trace, current PC 0x4300f5 Frame__C7BWindow + 0x9: KERN: (0x7ffee4cc) 0x234192 CheckForSizeOverrun__15TExpandoMenuBar + 0x7e KERN: (0x7ffee53c) 0x22b3a8 CheckForScrolling__8TBarView + 0x38 KERN: (0x7ffee56c) 0x22afdf PlaceApplicationBar__8TBarView + 0x3f3 KERN: (0x7ffee5dc) 0x22bbd1 _ChangeState__8TBarViewP8BMessage + 0x2e9 KERN: (0x7ffee62c) 0x22b5a4 ChangeState__8TBarViewlbN32 + 0xf0 KERN: (0x7ffee6bc) 0x22b4ac UpdatePlacement__8TBarView + 0x58 KERN: (0x7ffee6fc) 0x23bff2 AdjustPlacement__14TReplicantTray + 0xa6 KERN: (0x7ffee73c) 0x23e0bf AddIcon__14TReplicantTrayP8BMessagePlPC9entry_ref + 0x3af KERN: (0x7ffee86c) 0x23d42f LoadAddOn__14TReplicantTrayP6BEntryPlb + 0x2a3 KERN: (0x7ffee91c) 0x23cb59 InitAddOnSupport__14TReplicantTray + 0x185 KERN: (0x7ffeea0c) 0x23bd21 AttachedToWindow__14TReplicantTray + 0x1ed KERN: (0x7ffeea6c) 0x428c94 _Attach__5BView + 0x30 KERN: (0x7ffeea9c) 0x428d0f _Attach__5BView + 0xab KERN: (0x7ffeeacc) 0x428d0f _Attach__5BView + 0xab KERN: (0x7ffeeafc) 0x4255f5 _AddChild__5BViewP5BViewT1 + 0xe1 KERN: (0x7ffeeb3c) 0x425489 AddChild__5BViewP5BViewT1 + 0x29 KERN: (0x7ffeeb6c) 0x42b9a3 AddChild__7BWindowP5BViewT1 + 0x4b KERN: (0x7ffeebac) 0x22d3b7 __10TBarWindow + 0x15b KERN: (0x7ffeebfc) 0x223f72 __7TBarApp + 0xce KERN: (0x7ffeed8c) 0x223e2b main + 0x37 KERN: (0x7ffeef7c) 0x223ccf _start + 0x5b KERN: (0x7ffeefac) 0x10626e runtime_loader + 0x126
Also attached the debug output
Attachments (1)
Change History (8)
by , 8 years ago
Attachment: | Deskbar-545-debug-10-04-2013-12-02-31.report added |
---|
comment:1 by , 8 years ago
Description: | modified (diff) |
---|---|
Owner: | changed from | to
Status: | new → assigned |
follow-up: 4 comment:2 by , 8 years ago
Please try again in hrev45479 or greater. I am unable to reproduce this bug. You said that you set your preferences and then experienced this bug, can you tell me what preferences you set? I assume that you're in horizontal mode from the attached debug report. Also, gcc2h or gcc4h?
comment:3 by , 8 years ago
Hi John, sure: i will try (when a newer nightly build will be available on haiku-files.org) and i'll send you a feedback about this issue, if still present or not. In anyway with "set my preferences" i just mean preferences about keyboard shortcut, fonts, appearance and so on: nothing of particular :-) And i'm using GCC2h
comment:4 by , 8 years ago
Replying to jscipione:
Please try again in hrev45479 or greater.
Hi John, i've tried with hrev45480 and the bug is still here :-( If i insert NetworkStatus and/or ProcessController as replicants in the Deskbar, when Deskbar start at boot time, will crash. The only way to properly restart the Deskbar is to delete the file "Deskbar_replicants" located under /home/config/settings. The strange fact is that all others replicants doesn't cause Deskbar crash. Only NetworkStatus and ProcessController.
comment:5 by , 8 years ago
Currently i'm running hrev45525 and this issue seems gone (Deskbar no longer crashes at the next reboot if i add ProcessController and NetworkStatus replicants).
That's actually not the replicant's fault, looks like a bug in some of the recent changes with respect to the team expander menu bar.