Pass a pointer to the TBarView object into the ExpandoMenuBar constructor

I fear that perhaps the fBarView variable may be accessed before it has a
chance to be set in AttachedToWindow(). By setting it in the constructor there
is no chance of this. Might fix #9656